# libghwp

./: .gitignore  Makefile.am  README  configure.ac
debian/: changelog  control  control.in  copyright  rules
src/: Makefile.am  ghwp-0.1.pc.in  ghwp-document.c  ghwp-document.h  ghwp-file.c  ghwp-file.h  ghwp-page.c  ghwp-page.h  ghwp-parse.c  ghwp-parse.h  ghwp-tags.h  ghwp.h  gsf-input-stream.c  gsf-input-stream.h
