AC_INIT([libghwp], [0.1], [https://github.com/cogniti/libghwp/issues], [libghwp])

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC





LT_INIT


PKG_CHECK_MODULES(LIBGHWP, [libgsf-1 glib-2.0 gio-2.0 cairo gobject-2.0 cairo-ft freetype2 ])




AC_OUTPUT([
Makefile
src/ghwp-0.1.pc
src/Makefile
])
